Update after merging all dist extraction stuff to master